<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MetroCard Bonus Calc</string>

    <string name="action_settings">Settings</string>

    <!-- Activity titles -->
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_fare">Fare values</string>
    <string name="title_activity_settings_other">Other values</string>

    <!-- Main activity text -->
    <string name="prompt_balance">Current balance: $</string>
    <string name="prompt_rides">Number of rides needed: </string>
    <string name="prompt_fare_type">Fare type: </string>
    <string name="button_calculate">Calculate</string>
    <string name="spinner_entry">%1$s ($%2$s)</string>
    <string name="new_card">New card</string>
    <string name="existing_card">Refill</string>
    <string name="result_title">Result</string>
    <string name="result_fare">Fare type: %1$s</string>
    <string name="result_cost">Amount to add: $%1$s</string>
    <string name="result_new_card_info">Card balance: $%1$s</string>
    <string name="result_bonus_info">Amount saved: $%1$s</string>
    <plurals name="number_of_fares">
        <item quantity="one">%d fare</item>
        <item quantity="other">%d fares</item>
    </plurals>
    <string name="disclaimer">This software is not affiliated with or endorsed by the MTA.</string>

    <!-- Preference activities text -->
    <string name="pref_fare_values">Fare values</string>
    <string name="pref_summary_fare_values">Manually update fare values.</string>
    <string name="pref_other_values">Other values</string>
    <string name="pref_summary_other_values">Manually update other values, such as the bonus percentage.</string>
    <string name="pref_bonus_percentage">Bonus %</string>
    <string name="pref_bonus_min">Minimum amount for bonus</string>
    <string name="pref_increment">Payment increment</string>
    <string name="pref_new_card_fee">New card fee</string>
    <string name="pref_restore_settings">Restore default settings</string>
    <string name="confirm_restore">All values will revert to their defaults. Are you sure?</string>
    <string name="restored">Restored default settings.</string>

    <!-- Error messages -->
    <string name="message_all_fields_required">All fields are required.</string>
    <string name="message_blank_field">Field must not be blank.</string>
    <string name="message_invalid_increment">Increment must not be zero.</string>
    
    <!-- Dialog buttons -->
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    
    <!-- Fare types -->
    <string name="regular">Regular</string>
    <string name="reduced">Reduced</string>
    <string name="express_bus">Express Bus</string>
    <string name="express_bus_reduced">Express Bus Reduced</string>
    
</resources>
